# report2

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGES.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY_FINAL.md  CMakeLists.txt  IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTES.md  PROJECT_STATUS.txt  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SOLUTION_SUMMARY.txt  SOLUTION_SUMMARY_NEW.md  SUMMARY.md  TESTING.md  TESTING_GUIDE.md  UI_DESIGN.md  USER_GUIDE.md  VERIFICATION.md  VIBE_SETUP.md  WHISPER_GUIDE.md  check_webengine.bat  check_webengine.sh  last-report.pro  sample_lyrics.lrc  setup_api_key.bat  setup_api_key.sh  whisper_transcribe.py  widget.cpp  widget.h  widget.ui
.qtcreator/: last-report.pro.user.0b905ee
report/: widget.cpp  widget.h  widget.ui
